# DlmsSPODES

./: .gitignore  config.toml  pyproject.toml  setup.py
src/DLMS_SPODES/: exceptions.py  relation_to_OBIS.py  version.py
src/DLMS_SPODES/Values/EN/: relation_to_obis_names.py
src/DLMS_SPODES/Values/RU/: relation_to_obis_names.py
src/DLMS_SPODES/cosem_interface_classes/: __init__.py  a_parameter.py  activity_calendar.py  arbitrator.py  clock.py  collection.py  cosem_interface_class.py  disconnect_control.py  ln_pattern.py  overview.py  parameter.py  register.py  register_monitor.py  schedule.py  script_table.py  special_days_table.py
src/DLMS_SPODES/cosem_interface_classes/association_ln/: ver0.py  ver1.py  ver2.py
src/DLMS_SPODES/cosem_interface_classes/association_sn/: ver0.py
src/DLMS_SPODES/cosem_interface_classes/demand_register/: ver0.py
src/DLMS_SPODES/types/: choices.py  common_data_types.py  cosem_service_types.py
test/: collection_init.py  config.toml  init_collection.py  test.typ  test.xml  test_ActivityCalendar.py  test_AssociationLN.py  test_COSEMInterfaceClass.py  test_Data.py  test_DemandRegister.py  test_DisconnectControl.py  test_IC.py  test_ImageTransfer.py  test_LNPatterns.py  test_Limiter.py  test_NTPSetup.py  test_Parameter.py  test_ProfileGeneric.py  test_Register.py  test_RegisterActivation.py  test_RegisterMonitor.py  test_ScalerUnitType.py  test_Schedule.py  test_Structures.py  test_a_param.py  test_benchmark_create_obj.py  test_cdt.py  test_collection.py  test_electric_obj.py  test_enums.py  test_hdlc.py  test_report.py  test_save_type.typ  test_to_xml2.xml  test_to_xml4.xml
(+19 files in other folders)
