[build-system]
requires = [
    "setuptools",
    "setuptools-scm"]
build-backend = "setuptools.build_meta"

#[tool.setuptools]
#package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test","KPZ"]

[project]
name = "DLMS_SPODES"
version = "0.82.5"
authors = [
    {name="Serj Kotilevski", email="youserj@outlook.com"}
]
dependencies = [
    "pycryptodomex>=3.15",
    "semver>=3.0.2",
    "typing-extensions>=4.12.2",  # remove for 3.13(use for @deprecated)
    "StructResult>=0.2"
]
description="dlms-spodes"
readme = "README.md"
requires-python = ">=3.12"
keywords=["dlms"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
